chore: modify SetRetentionPolicyTest